完成对独立发布acooly组件的文档说明，README.md中的 `框架发布说明`